--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@food-cravings-api/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^9.1.1",
